qt6/gen_qmessagebox.h

class QAbstractButton;
class QMessageBox;
class QMetaObject;
class QPushButton;
class QWidget;
typedef struct QAbstractButton QAbstractButton;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMessageBox QMessageBox;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QPushButton QPushButton;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QMessageBox_override_virtual_enterEvent(void* self, intptr_t slot);
bool QMessageBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QMessageBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QMessageBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QMessageBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QMessageBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QMessageBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QMessageBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QMessageBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QMessageBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QMessageBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QMessageBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QMessageBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QMessageBox_override_virtual_metric(void* self, intptr_t slot);
int QMessageBox_virtualbase_metric(const void* self, int param1);
bool QMessageBox_override_virtual_initPainter(void* self, intptr_t slot);
void QMessageBox_virtualbase_initPainter(const void* self, QPainter* painter);
bool QMessageBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QMessageBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QMessageBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QMessageBox_virtualbase_sharedPainter(const void* self);
bool QMessageBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QMessageBox_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QMessageBox_virtualbase_inputMethodQuery(const void* self, int param1);
bool QMessageBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QMessageBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QMessageBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QMessageBox_override_virtual_childEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMessageBox_override_virtual_customEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_customEvent(void* self, QEvent* event);
bool QMessageBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QMessageBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMessageBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMessageBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QMessageBox_delete(QMessageBox* self);