qt6/gen_qmessagebox.nim

proc fcQMessageBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_enterEvent".}
proc fQMessageBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_leaveEvent".}
proc fcQMessageBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_leaveEvent".}
proc fQMessageBox_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_paintEvent".}
proc fcQMessageBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_paintEvent".}
proc fQMessageBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_moveEvent".}
proc fcQMessageBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_moveEvent".}
proc fQMessageBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_tabletEvent".}
proc fcQMessageBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_tabletEvent".}
proc fQMessageBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_actionEvent".}
proc fcQMessageBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_actionEvent".}
proc fQMessageBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_dragEnterEvent".}
proc fcQMessageBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_dragEnterEvent".}
proc fQMessageBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_dragMoveEvent".}
proc fcQMessageBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_dragMoveEvent".}
proc fQMessageBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_dragLeaveEvent".}
proc fcQMessageBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_dragLeaveEvent".}
proc fQMessageBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_dropEvent".}
proc fcQMessageBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_dropEvent".}
proc fQMessageBox_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_hideEvent".}
proc fcQMessageBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_hideEvent".}
proc fQMessageBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QMessageBox_virtualbase_nativeEvent".}
proc fcQMessageBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_nativeEvent".}
proc fQMessageBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QMessageBox_virtualbase_metric".}
proc fcQMessageBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_metric".}
proc fQMessageBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QMessageBox_virtualbase_initPainter".}
proc fcQMessageBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_initPainter".}
proc fQMessageBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QMessageBox_virtualbase_redirected".}
proc fcQMessageBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_redirected".}
proc fQMessageBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QMessageBox_virtualbase_sharedPainter".}
proc fcQMessageBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_sharedPainter".}
proc fQMessageBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QMessageBox_virtualbase_inputMethodEvent".}
proc fcQMessageBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_inputMethodEvent".}
proc fQMessageBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QMessageBox_virtualbase_inputMethodQuery".}
proc fcQMessageBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_inputMethodQuery".}
proc fQMessageBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QMessageBox_virtualbase_focusNextPrevChild".}
proc fcQMessageBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_focusNextPrevChild".}
proc fQMessageBox_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_timerEvent".}
proc fcQMessageBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_timerEvent".}
proc fQMessageBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_childEvent".}
proc fcQMessageBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_childEvent".}
proc fQMessageBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_customEvent".}
proc fcQMessageBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_customEvent".}
proc fQMessageBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMessageBox_virtualbase_connectNotify".}
proc fcQMessageBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_connectNotify".}
proc fQMessageBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMessageBox_virtualbase_disconnectNotify".}
proc fcQMessageBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_disconnectNotify".}
proc fcQMessageBox_delete(self: pointer) {.importc: "QMessageBox_delete".}


func init*(T: type QMessageBox, h: ptr cQMessageBox): QMessageBox =
  T(h: h)
proc create*(T: type QMessageBox, parent: gen_qwidget.QWidget): QMessageBox =

  QMessageBox.init(fcQMessageBox_new(parent.h))
proc create*(T: type QMessageBox, ): QMessageBox =

  QMessageBox.init(fcQMessageBox_new2())
proc create*(T: type QMessageBox, icon: QMessageBoxIcon, title: string, text: string): QMessageBox =

  QMessageBox.init(fcQMessageBox_new3(cint(icon), struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QMessageBox, title: string, text: string, icon: QMessageBoxIcon, button0: cint, button1: cint, button2: cint): QMessageBox =

  QMessageBox.init(fcQMessageBox_new4(struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text))), cint(icon), button0, button1, button2))
proc create*(T: type QMessageBox, icon: QMessageBoxIcon, title: string, text: string, buttons: QMessageBoxStandardButton): QMessageBox =

  QMessageBox.init(fcQMessageBox_new5(cint(icon), struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text))), cint(buttons)))
proc create*(T: type QMessageBox, icon: QMessageBoxIcon, title: string, text: string, buttons: QMessageBoxStandardButton, parent: gen_qwidget.QWidget): QMessageBox =

  QMessageBox.init(fcQMessageBox_new6(cint(icon), struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text))), cint(buttons), parent.h))
proc create*(T: type QMessageBox, icon: QMessageBoxIcon, title: string, text: string, buttons: QMessageBoxStandardButton, parent: gen_qwidget.QWidget, flags: gen_qnamespace.WindowType): QMessageBox =

  QMessageBox.init(fcQMessageBox_new7(cint(icon), struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text))), cint(buttons), parent.h, cint(flags)))
proc create*(T: type QMessageBox, title: string, text: string, icon: QMessageBoxIcon, button0: cint, button1: cint, button2: cint, parent: gen_qwidget.QWidget): QMessageBox =

  QMessageBox.init(fcQMessageBox_new8(struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text))), cint(icon), button0, button1, button2, parent.h))
proc create*(T: type QMessageBox, title: string, text: string, icon: QMessageBoxIcon, button0: cint, button1: cint, button2: cint, parent: gen_qwidget.QWidget, f: gen_qnamespace.WindowType): QMessageBox =

  QMessageBox.init(fcQMessageBox_new9(struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: text, len: csize_t(len(text))), cint(icon), button0, button1, button2, parent.h, cint(f)))
proc metaObject*(self: QMessageBox, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQMessageBox_metaObject(self.h))

proc metacast*(self: QMessageBox, param1: cstring): pointer =

  fcQMessageBox_metacast(self.h, param1)

proc metacall*(self: QMessageBox, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQMessageBox_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QMessageBox, s: cstring): string =

  let v_ms = fcQMessageBox_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addButton*(self: QMessageBox, button: gen_qabstractbutton.QAbstractButton, role: QMessageBoxButtonRole): void =

  fcQMessageBox_addButton(self.h, button.h, cint(role))

proc addButton2*(self: QMessageBox, text: string, role: QMessageBoxButtonRole): gen_qpushbutton.QPushButton =

  gen_qpushbutton.QPushButton(h: fcQMessageBox_addButton2(self.h, struct_miqt_string(data: text, len: csize_t(len(text))), cint(role)))

proc addButtonWithButton*(self: QMessageBox, button: QMessageBoxStandardButton): gen_qpushbutton.QPushButton =

  gen_qpushbutton.QPushButton(h: fcQMessageBox_addButtonWithButton(self.h, cint(button)))

proc removeButton*(self: QMessageBox, button: gen_qabstractbutton.QAbstractButton): void =

  fcQMessageBox_removeButton(self.h, button.h)

proc buttons*(self: QMessageBox, ): seq[gen_qabstractbutton.QAbstractButton] =

  var v_ma = fcQMessageBox_buttons(self.h)
  var vx_ret = newSeq[gen_qabstractbutton.QAbstractButton](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qabstractbutton.QAbstractButton(h: v_outCast[i])
  vx_ret

proc buttonRole*(self: QMessageBox, button: gen_qabstractbutton.QAbstractButton): QMessageBoxButtonRole =

  QMessageBoxButtonRole(fcQMessageBox_buttonRole(self.h, button.h))

proc setStandardButtons*(self: QMessageBox, buttons: QMessageBoxStandardButton): void =

  fcQMessageBox_setStandardButtons(self.h, cint(buttons))

proc standardButtons*(self: QMessageBox, ): QMessageBoxStandardButton =

  QMessageBoxStandardButton(fcQMessageBox_standardButtons(self.h))

proc standardButton*(self: QMessageBox, button: gen_qabstractbutton.QAbstractButton): QMessageBoxStandardButton =

  QMessageBoxStandardButton(fcQMessageBox_standardButton(self.h, button.h))

proc button*(self: QMessageBox, which: QMessageBoxStandardButton): gen_qabstractbutton.QAbstractButton =

  gen_qabstractbutton.QAbstractButton(h: fcQMessageBox_button(self.h, cint(which)))

proc defaultButton*(self: QMessageBox, ): gen_qpushbutton.QPushButton =

  gen_qpushbutton.QPushButton(h: fcQMessageBox_defaultButton(self.h))

proc setDefaultButton*(self: QMessageBox, button: gen_qpushbutton.QPushButton): void =

  fcQMessageBox_setDefaultButton(self.h, button.h)
